refactor: try things with redis pub/sub
