# delivery/http/server.go
@@ -5,9 +5,9 @@ import (
 	"github.com/labstack/echo/v4"
 	"github.com/labstack/echo/v4/middleware"
 	echoSwagger "github.com/swaggo/echo-swagger"
-	chathandler "hangout/delivery/http/handlers/chat"
 	grouphandler "hangout/delivery/http/handlers/group"
 	"hangout/delivery/http/handlers/health_check"
+	chathandler "hangout/delivery/http/handlers/privatechat"
 	user_handler "hangout/delivery/http/handlers/user"
 	"hangout/pkg/constants"
 	authservice "hangout/service/auth"
